feat: docs: add login && add swagger :money_with_wings:
