# pkg/docs/swagger.json
@@ -55,6 +55,46 @@
                 }
             }
         },
+        "/auth/login": {
+            "post": {
+                "description": "login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "login",
+                "parameters": [
+                    {
+                        "description": "Login Request",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/examples.SuccessLoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/examples.FailedCommonResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/register": {
             "post": {
                 "description": "register account",
@@ -137,6 +177,17 @@
                     "items": {
                         "$ref": "#/definitions/models.AccountModel"
                     }
+                },
+                "status": {
+                    "$ref": "#/definitions/examples.SuccessStatusMessage"
+                }
+            }
+        },
+        "examples.SuccessLoginResponse": {
+            "type": "object",
+            "properties": {
+                "payload": {
+                    "$ref": "#/definitions/response.LoginResponse"
                 },
                 "status": {
                     "$ref": "#/definitions/examples.SuccessStatusMessage"
@@ -260,10 +311,24 @@
                 }
             }
         },
+        "requests.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "requests.RegisterRequest": {
             "type": "object",
             "required": [
-                "age",
                 "email",
                 "password",
                 "username"
@@ -271,6 +336,8 @@
             "properties": {
                 "age": {
                     "type": "integer",
+                    "maximum": 130,
+                    "minimum": 0,
                     "example": 25
                 },
                 "email": {
@@ -281,11 +348,22 @@
                     "type": "string",
                     "maxLength": 20,
                     "minLength": 8,
-                    "example": "123425678"
+                    "example": "12345678"
                 },
                 "username": {
                     "type": "string",
                     "example": "user"
+                }
+            }
+        },
+        "response.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
                 }
             }
         }
